# job-scout

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  constants.py  database.py  main.py  models.py  seed.py
app/job_posting/: router.py  schema.py  service.py
app/job_posting/scraper/: openkerjaid.py
app/job_provider/: router.py  schema.py
app/openkerjaid/: router.py  schema.py  scraper.py  service.py
app/scraper/: jakartakerja.py  openkerjaid.py  service.py
app/templates/: .npmrc  index.html  netlify.toml  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  types.ts
app/templates/app/: globals.css  layout.tsx  loading.tsx  page.tsx
app/utils/: parse_date.py
migrations/: env.py
migrations/versions/: 02815f69ff3d_update_relation.py  0336c7505571_create_positions_and_specification_table.py  1f22d282e4cf_add_is_active_field_to_job_provider_.py  25ca1351777e_jobs_table_init.py  3e9e805430f5_init.py  692bf553161b_add_unique_field_to_job_posting_table.py  898a8d368f68_create_openkerja_table.py  918f07ce0cbe_add_age_field_to_specification_table.py  9959eeb3ac89_add_major_field_to_specifcation_table.py  be053da7f347_add_search_vector_column_and_triggers_.py  c6e3467f2d99_add_is_available_field.py  e5767734d5db_init.py  f3e64f9e8b62_add_syncinc_field_to_provider_table.py
templates/: next.config.ts  tsconfig.json
templates/app/: globals.css  layout.tsx  loading.tsx
templates/hooks/: use-debounce.ts
templates/providers/: query-client-provider.tsx
(+19 files in other folders)
