[project]
name = "loker-scrape"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "alembic>=1.16.5",
    "apscheduler>=3.11.0",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.118.2",
    "greenlet>=3.2.4",
    "lxml>=6.0.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
]
